--- a/Stacks and Queues/Fish.ipynb
+++ b/Stacks and Queues/Fish.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOK8LyA9/q0nAkoww5GGPoA",
+      "authorship_tag": "ABX9TyMQZIlmIjUerCCLF9lNBckV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,11 +69,14 @@
         "    stack_down = []                 # sizes of fish flowing downstream (B==1)\n",
         "    survivors_up = 0                # upstream fish that survive\n",
         "    for size, dir in zip(A, B):     # iterate fish in river order\n",
+        "        print(\"size,dir:\",size, dir)\n",
         "        if dir == 1:                # downstream fish: add to stack\n",
         "            stack_down.append(size)\n",
+        "            print('append down stream stack:',stack_down)\n",
         "        else:                       # upstream fish: may fight with downstream stack\n",
         "            while stack_down and stack_down[-1] < size:\n",
         "                stack_down.pop()    # downstream fish eaten by upstream fish\n",
+        "                print('pop down stream stack:',stack_down)\n",
         "            if not stack_down:      # no downstream fish left to fight\n",
         "                survivors_up += 1   # upstream fish survives\n",
         "            # else: upstream fish is eaten (do nothing)\n",
@@ -82,7 +85,7 @@
       "metadata": {
         "id": "pQCLHnmZK3p4"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -98,15 +101,59 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0KfHqaQxKtez",
-        "outputId": "badee2b2-f7a0-4d9a-8e2d-27f6c6704fc1"
+        "outputId": "3f23c9a6-c732-4d99-e59e-aff9d5c24427"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "size,dir: 4 0\n",
+            "size,dir: 3 1\n",
+            "append down stream stack: [3]\n",
+            "size,dir: 2 0\n",
+            "size,dir: 1 0\n",
+            "size,dir: 5 0\n",
+            "pop down stream stack: []\n",
             "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "stack_down =  [4, 3, 2, 1, 5]\n",
+        "while stack_down:\n",
+        "  print(\"top : \",stack_down[-1])\n",
+        "  stack_down.pop()\n",
+        "  print('stack_down:',stack_down)\n"
+      ],
+      "metadata": {
+        "id": "4uS9zjS7D97f",
+        "outputId": "83cf8a24-6ee9-46b5-ae9e-c8f31b11416d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "top :  5\n",
+            "stack_down: [4, 3, 2, 1]\n",
+            "top :  1\n",
+            "stack_down: [4, 3, 2]\n",
+            "top :  2\n",
+            "stack_down: [4, 3]\n",
+            "top :  3\n",
+            "stack_down: [4]\n",
+            "top :  4\n",
+            "stack_down: []\n"
           ]
         }
       ]
